[build-system]
requires = ["setuptools", "conda-build"]
build-backend = "setuptools.build_meta"

[project]
name = "pm_icecon"
description = "sea ice concentration estimates from passive microwave data"
readme = "README.md"
license = {text = "MIT"}
version = "0.1.1"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"