[project]
name = "pm_icecon"
version = "0.6.0"
description = "Sea ice concentration estimates from passive microwave data"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["pm_icecon*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
pm_icecon = ["py.typed"]

[tool.black]
target-version = ["py310"]

[tool.vulture]
paths = ["pm_icecon"]
min_confidence = 65

[tool.ruff]
target-version = "py310"

lint.extend-fixable = ["I"]
lint.extend-select = ["I"]

lint.ignore = [
  # D1: Ignore errors requiring docstrings on everything.
  # D203: "1 blank line required before class docstring"
  # D213: "Multi-line docstring summary should start at the second line"
  # E731: Lambda assignments are OK, use your best judgement.
  # RUF010: !a, !r, !s are too magical for me.
  "D1", "D203", "D213", "E731", "RUF010", "F403",
]

[tool.ruff.isort]
known-first-party = ["pm_icecon"]

[tool.ruff.mccabe]
max-complexity = 8

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.bumpversion]
current_version = "0.6.0"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "./recipe/meta.yaml"
search = 'version: "{current_version}"'
replace = 'version: "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'


[tool.mypy]
python_version = "3.10"
packages = ["pm_icecon"]
incremental = true
strict = false
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
check_untyped_defs = true
warn_unused_ignores = true
plugins = ["numpy.typing.mypy_plugin", ]

[[tool.mypy.overrides]]
module = [
  "invoke.*",
  "matplotlib.*",
  "cartopy.*",
  "scipy.*",
  "sklearn.*",
  "h5py.*",
  "pandas.*",
  "pyresample.*",
  "setuptools.*",
  "netCDF4.*",
  "rasterio.*",
  "ruamel.*",
]
ignore_missing_imports = true
